--- a/AGENCIAS/frontend/index.html
+++ b/AGENCIAS/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Agencia</title>
     <link rel="icon" href="/favicon.ico" />
+    <base href="/" />
     <script
      src="https://www.google.com/recaptcha/api.js?render=explicit" async defer>
     </script>
